# smm-sync

./: .cursorrules  .gitignore  .mcp.json  .mcp.json.example  AGENTS.md  CLAUDE.md  LICENSE  README.md  UAT_TASK.md  pyproject.toml  smm.toml
.agents/skills/axiom-caas/: SKILL.md
.claude/: settings.json  settings.local.json
.cursor/rules/: axiom-hub.mdc
.smm/: board.json  github.yml  graph  pending_decisions.json
docs/: VALIDATION.md  WHY.md  cli.md  mcp-tools.md
rust_cli/: Cargo.toml
rust_cli/src/: main.rs
scripts/: generate_demo_data.py  seed_demo_data.py  seed_prd_test.py
src/smm_sync/: __init__.py  cli.py  config.py  contradiction_index.py  coordinator.py  digest.py  drift.py  git_utils.py  ingester.py  jsonl_writer.py  lore_hook.py  mcp_server.py  security.py  state.py  watcher.py
src/smm_sync/capture/: __init__.py  github_capture.py  models.py
src/smm_sync/compliance/: __init__.py  lineage.py
src/smm_sync/context_graph/: __init__.py  client.py  models.py  seed.py
src/smm_sync/dashboard/: __init__.py  app.py
src/smm_sync/dashboard/static/: board.html  compliance.html  constraints.html  contradictions.html  decisions.html  digest_page.html  graph.html  index.html  timeline.html
tests/: test_ba_forms.py  test_board.py  test_cli.py  test_compliance_lineage.py  test_context_graph.py  test_contradiction_detection.py  test_coordinator.py  test_dashboard_api.py  test_deja_vu.py  test_digest.py  test_extraction_pipeline.py  test_github_capture.py  test_graph_api.py  test_hardening.py  test_ingester.py  test_install_command.py  test_jit_injection.py  test_mcp_new_tools.py  test_mcp_server.py  test_onboard.py  test_pdf_export.py  test_pr_injection.py  test_setup.py  test_state.py  test_time_saved.py  test_timeline.py
