[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smm-sync"
version = "0.1.0"
description = "Shared context and coordination for simultaneous AI agents"
authors = [{ name = "Varun Tawde" }]
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "jinja2>=3.1",
    "gitpython>=3.1",
    "watchdog>=3.0",
    "filelock>=3.12",
    "mcp>=1.0",
    "graphiti-core[anthropic]>=0.3",
    "kuzu>=0.6",
    "sentence-transformers>=3.0",
    "numpy>=1.24",
    "PyGithub>=2.1.1",
    "PyYAML>=6.0",
    "anthropic>=0.25",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "sse-starlette>=1.8.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=4.0"]

[project.scripts]
smm = "smm_sync.cli:main"
smm-fast-write = "smm_sync:_bin_stub"

[tool.maturin]
bindings = "bin"
manifest-path = "rust_cli/Cargo.toml"
python-source = "src"

[tool.setuptools.packages.find]
where = ["src"]


[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests that make real Anthropic API calls (deselect with '-m not slow')",
]

[tool.ruff]
line-length = 100
