[package]
name = "smm-fast-write"
version = "0.1.0"
edition = "2021"
description = "Hot-path Rust binary for smm add-decision — pure file I/O, ~10ms"

[[bin]]
name = "smm-fast-write"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
